# goopgoopdrooptroop

./: README.md  pyproject.toml
goopgoopdrooptroop/: __init__.py  __main__.py  art.py  game.py  goop.py  missions.py
goopgoopdrooptroop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
